--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,12 @@
             <artifactId>jquery</artifactId>
             <version>3.2.1</version>
         </dependency>
+        <!--        Mail-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
+        <!--        Validator-->
         <dependency>
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
