--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -4,3 +4,12 @@ user.password.msg = Password must have 8 - 32 characters .
 user.firsName.msg = First Name is not empty .
 user.lastName.msg = Last Name is not empty .
 user.password.confirm.msg = The password fields must match .
+
+#===== message title page
+/admin = Management
+/ = Login
+/login = Login
+/weather_search = Home
+/registerAccount = Register
+/weather_detail = Weather Forecast
+/weather_search/search-city = Search Weather
